# serializer version: 1
# name: TestElement.test_element_stats_postgres_queries_are_as_expected
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE ("insights_user"."is_active"
         AND "insights_user"."id" = 99999)
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.1
  '''
  SELECT "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organization"
  WHERE "insights_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.10
  '''
  SELECT "insights_externaldatasource"."created_by_id",
         "insights_externaldatasource"."created_at",
         "insights_externaldatasource"."updated_at",
         "insights_externaldatasource"."deleted",
         "insights_externaldatasource"."deleted_at",
         "insights_externaldatasource"."id",
         "insights_externaldatasource"."source_id",
         "insights_externaldatasource"."connection_id",
         "insights_externaldatasource"."destination_id",
         "insights_externaldatasource"."team_id",
         "insights_externaldatasource"."sync_frequency",
         "insights_externaldatasource"."status",
         "insights_externaldatasource"."source_type",
         "insights_externaldatasource"."api_version",
         "insights_externaldatasource"."job_inputs",
         "insights_externaldatasource"."connection_metadata",
         "insights_externaldatasource"."are_tables_created",
         "insights_externaldatasource"."prefix",
         "insights_externaldatasource"."description",
         "insights_externaldatasource"."created_via",
         "insights_externaldatasource"."access_method",
         "insights_externaldatasource"."direct_query_enabled",
         "insights_externaldatasource"."auto_sync_new_schemas",
         "insights_externaldatasource"."auto_sync_schema_patterns",
         "insights_externaldatasource"."revenue_analytics_enabled",
         "insights_externaldatasourcerevenueanalyticsconfig"."external_data_source_id",
         "insights_externaldatasourcerevenueanalyticsconfig"."enabled",
         "insights_externaldatasourcerevenueanalyticsconfig"."include_invoiceless_charges"
  FROM "insights_externaldatasource"
  LEFT OUTER JOIN "insights_externaldatasourcerevenueanalyticsconfig" ON ("insights_externaldatasource"."id" = "insights_externaldatasourcerevenueanalyticsconfig"."external_data_source_id")
  WHERE ("insights_externaldatasource"."source_type" IN ('Stripe')
         AND "insights_externaldatasource"."team_id" = 99999
         AND NOT ("insights_externaldatasource"."deleted"
                  AND "insights_externaldatasource"."deleted" IS NOT NULL))
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.11
  '''
  SELECT "insights_datawarehousetable"."created_by_id",
         "insights_datawarehousetable"."created_at",
         "insights_datawarehousetable"."updated_at",
         "insights_datawarehousetable"."deleted",
         "insights_datawarehousetable"."deleted_at",
         "insights_datawarehousetable"."id",
         "insights_datawarehousetable"."name",
         "insights_datawarehousetable"."format",
         "insights_datawarehousetable"."team_id",
         "insights_datawarehousetable"."url_pattern",
         "insights_datawarehousetable"."queryable_folder",
         "insights_datawarehousetable"."credential_id",
         "insights_datawarehousetable"."external_data_source_id",
         "insights_datawarehousetable"."columns",
         "insights_datawarehousetable"."column_order",
         "insights_datawarehousetable"."options",
         "insights_datawarehousetable"."row_count",
         "insights_datawarehousetable"."size_in_s3_mib",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_datawarehousetable"
  LEFT OUTER JOIN "insights_externaldatasource" ON ("insights_datawarehousetable"."external_data_source_id" = "insights_externaldatasource"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_datawarehousetable"."created_by_id" = "insights_user"."id")
  WHERE ("insights_datawarehousetable"."team_id" = 99999
         AND NOT ("insights_datawarehousetable"."deleted"
                  AND "insights_datawarehousetable"."deleted" IS NOT NULL)
         AND NOT ("insights_externaldatasource"."deleted"
                  AND "insights_externaldatasource"."deleted" IS NOT NULL)
         AND NOT ("insights_externaldatasource"."access_method" = 'direct'
                  AND "insights_externaldatasource"."access_method" IS NOT NULL))
  ORDER BY "insights_datawarehousetable"."created_at" DESC
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.12
  '''
  SELECT "insights_datawarehousejoin"."created_by_id",
         "insights_datawarehousejoin"."created_at",
         "insights_datawarehousejoin"."deleted",
         "insights_datawarehousejoin"."deleted_at",
         "insights_datawarehousejoin"."id",
         "insights_datawarehousejoin"."team_id",
         "insights_datawarehousejoin"."source_table_name",
         "insights_datawarehousejoin"."source_table_key",
         "insights_datawarehousejoin"."joining_table_name",
         "insights_datawarehousejoin"."joining_table_key",
         "insights_datawarehousejoin"."field_name",
         "insights_datawarehousejoin"."configuration"
  FROM "insights_datawarehousejoin"
  WHERE ("insights_datawarehousejoin"."team_id" = 99999
         AND NOT ("insights_datawarehousejoin"."deleted"
                  AND "insights_datawarehousejoin"."deleted" IS NOT NULL))
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.13
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_team"
  INNER JOIN "insights_organization" ON ("insights_team"."organization_id" = "insights_organization"."id")
  WHERE "insights_team"."id" = 99999
  ORDER BY "insights_team"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.2
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."ingested_production_event",
         "insights_team"."ingested_production_event_last_checked_at",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_recording_trigger_groups",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."event_retention_months",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."llm_gateway_enabled_at",
         "insights_team"."llm_gateway_revoked_at",
         "insights_team"."llm_gateway_overspend_allowance_usd",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.3
  '''
  SELECT "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organization"
  WHERE "insights_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.4
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE ("insights_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.5
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at",
         "insights_team"."organization_id" AS "_team_organization_id"
  FROM "ee_accesscontrol"
  INNER JOIN "insights_team" ON ("ee_accesscontrol"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "insights_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("insights_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.6
  '''
  SELECT "insights_organizationmembership"."id",
         "insights_organizationmembership"."organization_id",
         "insights_organizationmembership"."user_id",
         "insights_organizationmembership"."level",
         "insights_organizationmembership"."joined_at",
         "insights_organizationmembership"."updated_at",
         "insights_organizationmembership"."invited_by_id",
         "insights_organization"."id",
         "insights_organization"."name",
         "insights_organization"."slug",
         "insights_organization"."logo_media_id",
         "insights_organization"."created_at",
         "insights_organization"."updated_at",
         "insights_organization"."is_active",
         "insights_organization"."is_not_active_reason",
         "insights_organization"."session_cookie_age",
         "insights_organization"."is_member_join_email_enabled",
         "insights_organization"."is_ai_data_processing_approved",
         "insights_organization"."is_ai_training_opted_in",
         "insights_organization"."is_ai_training_locked",
         "insights_organization"."is_ai_training_cta_shown",
         "insights_organization"."enforce_2fa",
         "insights_organization"."members_can_invite",
         "insights_organization"."members_can_create_projects",
         "insights_organization"."members_can_use_personal_api_keys",
         "insights_organization"."members_can_see_org_members",
         "insights_organization"."allow_publicly_shared_resources",
         "insights_organization"."default_role_id",
         "insights_organization"."plugins_access_level",
         "insights_organization"."for_internal_metrics",
         "insights_organization"."default_experiment_stats_method",
         "insights_organization"."default_anonymize_ips",
         "insights_organization"."is_hipaa",
         "insights_organization"."is_pending_deletion",
         "insights_organization"."customer_id",
         "insights_organization"."available_product_features",
         "insights_organization"."usage",
         "insights_organization"."never_drop_data",
         "insights_organization"."customer_trust_scores",
         "insights_organization"."setup_section_2_completed",
         "insights_organization"."personalization",
         "insights_organization"."domain_whitelist",
         "insights_organization"."is_platform"
  FROM "insights_organizationmembership"
  INNER JOIN "insights_organization" ON ("insights_organizationmembership"."organization_id" = "insights_organization"."id")
  WHERE "insights_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.7
  '''
  SELECT "insights_datawarehousesavedquery"."created_by_id",
         "insights_datawarehousesavedquery"."created_at",
         "insights_datawarehousesavedquery"."updated_at",
         "insights_datawarehousesavedquery"."deleted",
         "insights_datawarehousesavedquery"."deleted_at",
         "insights_datawarehousesavedquery"."id",
         "insights_datawarehousesavedquery"."name",
         "insights_datawarehousesavedquery"."team_id",
         "insights_datawarehousesavedquery"."latest_error",
         "insights_datawarehousesavedquery"."columns",
         "insights_datawarehousesavedquery"."column_order",
         "insights_datawarehousesavedquery"."external_tables",
         "insights_datawarehousesavedquery"."query",
         "insights_datawarehousesavedquery"."status",
         "insights_datawarehousesavedquery"."last_run_at",
         "insights_datawarehousesavedquery"."sync_frequency_interval",
         "insights_datawarehousesavedquery"."table_id",
         "insights_datawarehousesavedquery"."is_materialized",
         "insights_datawarehousesavedquery"."deleted_name",
         "insights_datawarehousesavedquery"."managed_viewset_id",
         "insights_datawarehousesavedquery"."folder_id",
         "insights_datawarehousesavedquery"."origin",
         "insights_datawarehousesavedquery"."is_test",
         "insights_datawarehousesavedquery"."expires_at",
         "insights_datawarehousesavedquery"."semantic_enrichment_hash",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in",
         "insights_datawarehousetable"."created_by_id",
         "insights_datawarehousetable"."created_at",
         "insights_datawarehousetable"."updated_at",
         "insights_datawarehousetable"."deleted",
         "insights_datawarehousetable"."deleted_at",
         "insights_datawarehousetable"."id",
         "insights_datawarehousetable"."name",
         "insights_datawarehousetable"."format",
         "insights_datawarehousetable"."team_id",
         "insights_datawarehousetable"."url_pattern",
         "insights_datawarehousetable"."queryable_folder",
         "insights_datawarehousetable"."credential_id",
         "insights_datawarehousetable"."external_data_source_id",
         "insights_datawarehousetable"."columns",
         "insights_datawarehousetable"."column_order",
         "insights_datawarehousetable"."options",
         "insights_datawarehousetable"."row_count",
         "insights_datawarehousetable"."size_in_s3_mib",
         "insights_datawarehousemanagedviewset"."created_by_id",
         "insights_datawarehousemanagedviewset"."created_at",
         "insights_datawarehousemanagedviewset"."updated_at",
         "insights_datawarehousemanagedviewset"."id",
         "insights_datawarehousemanagedviewset"."team_id",
         "insights_datawarehousemanagedviewset"."kind"
  FROM "insights_datawarehousesavedquery"
  LEFT OUTER JOIN "insights_datawarehousemanagedviewset" ON ("insights_datawarehousesavedquery"."managed_viewset_id" = "insights_datawarehousemanagedviewset"."id")
  LEFT OUTER JOIN "insights_user" ON ("insights_datawarehousesavedquery"."created_by_id" = "insights_user"."id")
  LEFT OUTER JOIN "insights_datawarehousetable" ON ("insights_datawarehousesavedquery"."table_id" = "insights_datawarehousetable"."id")
  WHERE ("insights_datawarehousesavedquery"."team_id" = 99999
         AND NOT ("insights_datawarehousesavedquery"."deleted"
                  AND "insights_datawarehousesavedquery"."deleted" IS NOT NULL)
         AND "insights_datawarehousesavedquery"."managed_viewset_id" IS NULL)
  ORDER BY "insights_datawarehousesavedquery"."name" ASC
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.8
  '''
  SELECT "insights_datawarehousesavedquery"."created_by_id",
         "insights_datawarehousesavedquery"."created_at",
         "insights_datawarehousesavedquery"."updated_at",
         "insights_datawarehousesavedquery"."deleted",
         "insights_datawarehousesavedquery"."deleted_at",
         "insights_datawarehousesavedquery"."id",
         "insights_datawarehousesavedquery"."name",
         "insights_datawarehousesavedquery"."team_id",
         "insights_datawarehousesavedquery"."latest_error",
         "insights_datawarehousesavedquery"."columns",
         "insights_datawarehousesavedquery"."column_order",
         "insights_datawarehousesavedquery"."external_tables",
         "insights_datawarehousesavedquery"."query",
         "insights_datawarehousesavedquery"."status",
         "insights_datawarehousesavedquery"."last_run_at",
         "insights_datawarehousesavedquery"."sync_frequency_interval",
         "insights_datawarehousesavedquery"."table_id",
         "insights_datawarehousesavedquery"."is_materialized",
         "insights_datawarehousesavedquery"."deleted_name",
         "insights_datawarehousesavedquery"."managed_viewset_id",
         "insights_datawarehousesavedquery"."folder_id",
         "insights_datawarehousesavedquery"."origin",
         "insights_datawarehousesavedquery"."is_test",
         "insights_datawarehousesavedquery"."expires_at",
         "insights_datawarehousesavedquery"."semantic_enrichment_hash",
         "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."credentials_reviewed_at",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."hide_mcp_hints",
         "insights_user"."ui_configuration",
         "insights_user"."onboarding_skipped_at",
         "insights_user"."onboarding_skipped_reason",
         "insights_user"."onboarding_skipped_organization_id",
         "insights_user"."onboarding_delegated_to_invite_id",
         "insights_user"."onboarding_delegated_to_organization_id",
         "insights_user"."onboarding_delegation_accepted_at",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in",
         "insights_datawarehousetable"."created_by_id",
         "insights_datawarehousetable"."created_at",
         "insights_datawarehousetable"."updated_at",
         "insights_datawarehousetable"."deleted",
         "insights_datawarehousetable"."deleted_at",
         "insights_datawarehousetable"."id",
         "insights_datawarehousetable"."name",
         "insights_datawarehousetable"."format",
         "insights_datawarehousetable"."team_id",
         "insights_datawarehousetable"."url_pattern",
         "insights_datawarehousetable"."queryable_folder",
         "insights_datawarehousetable"."credential_id",
         "insights_datawarehousetable"."external_data_source_id",
         "insights_datawarehousetable"."columns",
         "insights_datawarehousetable"."column_order",
         "insights_datawarehousetable"."options",
         "insights_datawarehousetable"."row_count",
         "insights_datawarehousetable"."size_in_s3_mib"
  FROM "insights_datawarehousesavedquery"
  LEFT OUTER JOIN "insights_user" ON ("insights_datawarehousesavedquery"."created_by_id" = "insights_user"."id")
  LEFT OUTER JOIN "insights_datawarehousetable" ON ("insights_datawarehousesavedquery"."table_id" = "insights_datawarehousetable"."id")
  WHERE ("insights_datawarehousesavedquery"."team_id" = 99999
         AND "insights_datawarehousesavedquery"."origin" = 'endpoint'
         AND NOT ("insights_datawarehousesavedquery"."deleted"
                  AND "insights_datawarehousesavedquery"."deleted" IS NOT NULL))
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.9
  '''
  SELECT "insights_teamrevenueanalyticsconfig"."team_id",
         "insights_teamrevenueanalyticsconfig"."filter_test_accounts",
         "insights_teamrevenueanalyticsconfig"."notified_first_sync",
         "insights_teamrevenueanalyticsconfig"."events",
         "insights_teamrevenueanalyticsconfig"."goals",
         "insights_teamrevenueanalyticsconfig"."base_currency"
  FROM "insights_teamrevenueanalyticsconfig"
  WHERE "insights_teamrevenueanalyticsconfig"."team_id" = 99999
  LIMIT 21
  '''
# ---
